--- a/RY.Base/RY.Base.csproj
+++ b/RY.Base/RY.Base.csproj
@@ -46,8 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DispenserData.cs" />
     <Compile Include="MsgBox.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerializationFile.cs" />
     <Compile Include="UserLog.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
